--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@
 .fundder-button:hover{
   color: white;
   background: #ED6A6E;
+  /* opacity: 0.7; */
   border: 2px solid white;
   margin-bottom: -4px;
   outline: none
@@ -117,7 +118,6 @@
   font-size: 1.6em;
 }
 .fundder-section-subtitle{
-  text-transform: uppercase;
   letter-spacing: 0.02em;
   font-size: 1.2em;
   font-weight: 600;
