--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@
   font-size: 1.6em;
 }
 .fundder-section-subtitle{
+  /* text-transform: uppercase; */
   letter-spacing: 0.02em;
   font-size: 1.2em;
   font-weight: 600;
